test/integration/bad/missing_dist_suffix/deprecated_suffix.stan
data {
}
model {
    target += von_mises_ccdf_log(1, 0,1);
}